@@ -1,12 +1,7 @@
 {
-  "count": 25,
-  "uniques": 16,
+  "count": 23,
+  "uniques": 14,
   "views": [
-    {
-      "timestamp": "2022-03-30T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-03-31T00:00:00Z",
       "count": 1,
